--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Very Interesting</h2>
     <p>love u git</p>
     <p>Lets go for  party</p>
+    <img src="flower.jpg" alt="">
 </body>
 </html>
