learning about second branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>Very Interesting</h2>
     <p>love u git</p>
     <p>Lets go for  party</p>
+    <p>new branch</p>
     <img src="flower.jpg" alt="">
 </body>
 </html>
